--- a/src/components/Navbar/_navbar.scss
+++ b/src/components/Navbar/_navbar.scss
@@ -1,51 +1,63 @@
-.nav {
-  background-color: #333; // Màu nền của thanh điều hướng
+.navbar {
+  background-color: #333;
   padding: 1rem;
-  position: relative;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
 
   .menu-icon {
-    display: none; // Ẩn biểu tượng menu ở chế độ desktop
+    display: none;
     cursor: pointer;
     color: white;
 
     @media (max-width: 768px) {
-      display: block; // Hiển thị biểu tượng menu ở chế độ di động
+      display: block;
     }
   }
 
   .navbar-list {
-    list-style: none;
-    margin: 0;
-    padding: 0;
     display: flex;
     justify-content: space-around;
     align-items: center;
-
-    li {
-      a {
-        color: white; // Màu chữ của các liên kết
-        text-decoration: none; // Loại bỏ gạch chân
-        padding: 0.5rem 1rem;
-        display: block;
-        transition: background-color 0.3s ease;
-
-        &:hover {
-          background-color: #bcd100; // Màu nền khi hover
-        }
-      }
-    }
+    width: 100%;
 
     @media (max-width: 768px) {
-      display: none; // Ẩn danh sách menu ở chế độ di động
-      flex-direction: column; // Chuyển đổi thành dọc
+      display: none; // Hide menu list in mobile view
+      flex-direction: column; // Change to vertical layout
+      width: auto;
 
       &.open {
-        display: flex; // Hiển thị danh sách menu khi mở
+        display: flex; // Show menu list when open
       }
 
-      li {
-        margin: 0.5rem 0; // Tạo khoảng cách giữa các mục menu
+      p {
+        width: 100%; // Full width for each item in mobile view
+        margin: 0.5rem 0; // Space between menu items
       }
+    }
+  }
+
+  a {
+    text-decoration: none; // Remove underline from links
+  }
+
+  p {
+    color: white;
+    text-align: center;
+    padding: 10px;
+    font-size: 18px;
+    line-height: 15px;
+    border-radius: 5px;
+    flex: 1; // Ensure even spacing
+
+    &:hover {
+      background-color: #ddd;
+      color: #5d6770;
+    }
+
+    &.active {
+      background-color: #bcd100;
+      color: white;
     }
   }
 }
