--- a/src/pages/admin/_admin.scss
+++ b/src/pages/admin/_admin.scss
@@ -7,7 +7,7 @@
         background-color: #f5f5f5;
         th {
             padding: 10px;
-            text-align: left;
+            text-align: center;
             border-bottom: 1px solid #ddd;
         }
     }
@@ -30,4 +30,9 @@
             }
         }
     }
+}
+.button-container {
+    display: flex;
+    gap: 10px; /* Khoảng cách giữa hai nút */
+    align-items: center; /* Căn giữa theo trục dọc */
 }
