--- a/src/components/layouts/_footer.scss
+++ b/src/components/layouts/_footer.scss
@@ -2,7 +2,7 @@
   min-height: 200px;
   width: 100%;
   &-background {
-    background-image: url("../../assets/web/bannerhoa.jpg");
+    background-image: url("../../assets/web/footer.jpg");
     background-position: bottom;
     background-repeat: no-repeat;
     background-size: cover;
@@ -32,10 +32,12 @@
       font-size: 1em;
       margin-bottom: 10px;
       text-align: left;
+      color: white;
     }
-    .social-icons {
+    .social {
       padding-bottom: 20px;
       text-align: left;
+      color: white;
     }
 
     .hotline {
@@ -46,11 +48,13 @@
         font-weight: bold;
         padding-bottom: 20px;
         margin: 10px 0 0 0;
+        color: white;
       }
       span {
         font-weight: 400;
         padding-bottom: 10px;
         margin: 5px 0;
+        color: white;
       }
     }
   }
@@ -59,6 +63,7 @@
     margin-top: 20px;
     p {
       margin: 0;
+      color: white;
     }
   }
 }
@@ -66,9 +71,7 @@
   display: flex;
   justify-content: flex-start;
   font-size: 30px;
-  .icon-con {
-    padding: 0px 5px;
-  }
+  color: white;
 }
 @media (max-width: 768px) {
   .icon {
